# python-project-83

./: .env.sample  .gitignore  Makefile  README.md  database.sql  pyproject.toml  setup.cfg  test.py
.github/workflows/: check.yaml
page_analyzer/: .env  app.py  checker.py  constants.py  db.py  html_content.py  test.py  urls.py  validator.py
page_analyzer/CRUD/: crud_utils.py  db_util.py
page_analyzer/db/: db.py
page_analyzer/templates/: Index.html  base.html  index.html  urls.html  urls_view.html
page_analyzer/utilities/: checker.py  html_content.py  parser.py  validator.py
page_analyzer/validation/: validator.py
templates/: base.html
