[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AntonLysachev <anton@lysachev.ru>"]
readme = "README.md"
packages = [{include = "page_analyzer"}]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^3.0.2"
gunicorn = "^20.1.0"
python-dotenv = "^1.0.1"
flake8 = "^6.1.0"
bs4 = "^0.0.2"
pip = "^24.0"
install = "^1.3.5"
psycopg2-binary = "^2.9.9"
validators = "^0.22.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
